[tool.poetry]
name = "ayon-kitsu"
version = "1.2.3"
description = ""
authors = ["Martastain <martas@imm.cz>", "Scott McDonnell <scott@jammedia.com", "Jacob Danell <jacob@emberlight.se>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
gazu = "^0.9.17"
ayon-python-api = "^1.0.0"
requests = "^2.27.1"
nxtools = "^1.6"
codenamize = "^1.2.3"
pytest-mock = "^3.12.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"